<resources>
    <string name="app_name">news</string>
    <string name="home">主页</string>
    <string name="artical">文章</string>
    <string name="me">我</string>
    <string name="qiushi">糗事</string>
    <string name="qiushi_circle">糗事圈</string>
    <string name="live">直播</string>
    <string name="paper">小纸条</string>
    <string name="regist_account">注册账号</string>
    <string name="regist">注册</string>
    <string name="next">下一步</string>
    <string name="input_msg_code">填写短信验证码</string>
    <string name="regist_send_msg_to">短信已发送到+%1$s</string>
    <string name="error_mobile_not_empty">手机号不能为空</string>
    <string name="error_psw_not_empty">密码不能为空</string>
    <string name="user_info_regist_login">注册/登录</string>

</resources>
