<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_bottom_home"
        android:enabled="true"
        android:icon="@drawable/ic_qiushi_selector"
        android:title="@string/home"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/nav_bottom_artical"
        android:enabled="true"
        android:icon="@drawable/ic_qiushi_selector"
        android:title="@string/artical"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/nav_bottom_me"
        android:enabled="true"
        android:icon="@drawable/ic_qiushi_selector"
        android:title="@string/me"
        app:showAsAction="ifRoom" />


</menu>