<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mvp.news.ui.activity.MainActivity">

    <include
        layout="@layout/include_app_bar"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/fl_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/tb_main" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_e5e5e5" />

    <RadioGroup
        android:id="@+id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:gravity="center"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/rb_index_main"
            style="@style/main_RadioButton_style"
            android:drawableTop="@drawable/ic_qiushi_selector"
            android:text="@string/home" />


        <RadioButton
            android:id="@+id/rb_qs_main"
            style="@style/main_RadioButton_style"
            android:drawableTop="@drawable/ic_qiushi_circle_selector"
            android:text="@string/qiushi_circle" />


        <RadioButton
            android:id="@+id/rb_live_main"
            style="@style/main_RadioButton_style"
            android:drawableTop="@drawable/ic_live_selector"
            android:text="@string/live" />

        <RadioButton
            android:id="@+id/rb_paper_main"
            style="@style/main_RadioButton_style"
            android:drawableTop="@drawable/ic_paper_selector"
            android:text="@string/paper" />

        <RadioButton
            android:id="@+id/rb_me_main"
            style="@style/main_RadioButton_style"
            android:drawableTop="@drawable/ic_mine_selector"
            android:text="@string/me" />


    </RadioGroup>


</LinearLayout>
